--- a/simulador.html
+++ b/simulador.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador Financeiro</title>
+    <style>
+        * {
+            font-family:Arial, Helvetica, sans-serif;
+        }
+    </style>
 </head>
 <body>
     <h1>Simulador Financeiro</h1>
@@ -14,6 +19,13 @@
         <option value="Phalaenopsis">Phalaenopsis</option>
         <option value="Cattleya">Cattleya</option>
         <option value="Vanda">Vanda</option>
+    </select><br><br>
+
+    Porte de Orquídea cultivada:
+    <select id="select_tamanho">
+        <option value="Pequena">Pequena</option>
+        <option value="Media">Média</option>
+        <option value="Grande">Grande</option>
     </select><br><br>
 
     Quantidade de Orquídeas cultivadas (em média):
@@ -40,30 +52,50 @@
 
     function calcular() {
         var orquideaSelecionada = select_orquidea.value;
+        var porteSelecionado = select_tamanho.value;
         var qtdOrquidea = Number(input_qtdOrquidea.value);
         var qtdFuncionario = Number(input_qtdPessoas.value);
         var valorUnidade = Number(input_valorUni.value);
 
         if (orquideaSelecionada == "Phalaenopsis") {
-            valorCompOrquidea = 75;
+            if (porteSelecionado == "Pequena") {
+                valorCompOrquidea = 75;
+            } else if (porteSelecionado == "Media") {
+                valorCompOrquidea = 100;
+            } else if (porteSelecionado == "Grande") {
+                valorCompOrquidea = 125;
+            }
+
             if (valorUnidade < 20) {
                 div_mensagem.innerHTML = `<br><b>OBS: você está vendendo por um valor abaixo da média</b><br>`;
             }
-        }
-        if (orquideaSelecionada == "Cattleya") {
-            valorCompOrquidea = 150;
+        } else if (orquideaSelecionada == "Cattleya") {
+            if (porteSelecionado == "Pequena") {
+                valorCompOrquidea = 125;
+            } else if (porteSelecionado == "Media") {
+                valorCompOrquidea = 150;
+            } else if (porteSelecionado == "Grande") {
+                valorCompOrquidea = 175;
+            }
+
             if (valorUnidade < 30) {
                 div_mensagem.innerHTML = `<br><b>OBS: você está vendendo por um valor abaixo da média</b><br>`;
             }
-        }
-        if (orquideaSelecionada == "Vanda") {
-            valorCompOrquidea = 250;
+        } else if (orquideaSelecionada == "Vanda") {
+            if (porteSelecionado == "Pequena") {
+                valorCompOrquidea = 200;
+            } else if (porteSelecionado == "Media") {
+                valorCompOrquidea = 250;
+            } else if (porteSelecionado == "Grande") {
+                valorCompOrquidea = 300;
+            }
+
             if (valorUnidade < 80) {
                 div_mensagem.innerHTML = `<br><b>OBS: você está vendendo por um valor abaixo da média</b><br>`;
             }
         }
 
-        var valorTotalOrquidea = ((valorCompOrquidea + valorUnidade) / 2) * (qtdOrquidea - (qtdOrquidea * 0.1));
+        var valorTotalOrquidea = ((valorCompOrquidea + valorUnidade) / 2) * qtdOrquidea;
         //pega o valor médio daquele tipo de orquidea + valor pretendido para fazer uma média em que o valor de venda
         //de cada orquidea se torne um bom valor para sua venda num geral, após isso faz vezes a quantidade de orquidea
         //plantada - 10% visto que segundo pesquisadores cada plantação perde cerca de 10% do total de orquideas plantadas
@@ -72,11 +104,12 @@
         //     salário médio de um cuidador orquidea
 
         var totalSemServico = valorTotalOrquidea - valorMaoDeObra;
+        var totalComServico = totalSemServico + totalSemServico * 0.12;
 
         div_mensagem.innerHTML = `<br>Com os dados informados, sua margem financeira de lucro 
-                                pode ser de R$${totalSemServico.toFixed(2)} , isso levando em conta valores como
-                                mão de obra de funcionários, valor médio por unidade de orquidea e o tipo de orquidea
-                                informado.<br>Com nosso serviço de monitoramentos sua margem financeira de lucro pode crescer
-                                em até 15%, chegando a valores como R$${(totalSemServico + totalSemServico * 0.15).toFixed(2)}`;
+                                pode ser de <b>R$${totalSemServico.toFixed(2)}</b> , isso levando em conta valores como
+                                mão de obra de funcionários, valor médio por unidade de orquidea, tipo de orquidea
+                                informado e possiveis perdas.<br>Com nosso serviço de monitoramentos sua margem financeira de lucro pode crescer
+                                em até 12%, chegando a valores como <b style="color: green;">R$${totalComServico.toFixed(2)}</b>`;
     }
 </script>
